# gpu

./: .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CMakeLists.txt  Makefile  Notes jan 2.md  README.md  agx_1tri.py  enable_simulator.sh  flat_load.ipynb  go.sum  gpu.go  linux-so-version.txt  thegeeko.md
ClusterSim/libcuda/: CMakeLists.txt  cuda_api_object.h  cuda_runtime_api.cc  cuobjdump.l
ClusterSim/src/accelwattch/: CMakeLists.txt
ClusterSim/src/gpgpu-sim/: CMakeLists.txt  addrdec.cc  dram.cc  gpu-cache.h  gpu-sim.cc  gpu-sim.h  mem_latency_stat.h  power_stat.h  sm_2_sm_network.h
ClusterSim/src/intersim2/: CMakeLists.txt  interconnect_interface.cpp
cuobjdump_to_ptxplus/: CMakeLists.txt  cuobjdumpInstList.cc
hipEngine/: AGENTS.md  hatch_build.py  pyproject.toml
hipEngine/.github/workflows/: publish.yml
hipEngine/benchmarks/: 7900XTX.md  README.md  W7900.md
hipEngine/benchmarks/configs/: llamacpp-mtp-qwen36-27b.json
hipEngine/benchmarks/fixtures/: llamacpp_mtp_bench_prompts.json
hipEngine/benchmarks/results/: 2026-05-13-source-lineage-qwen35-paro-optimal-4k-128.json  2026-05-13-source-lineage-qwen35-paro-optimal-512-128.json  2026-05-14-hipengine-qwen35-c1-parent-fixture-blocked.json  2026-05-14-hipengine-qwen35-paro-512-128-ab-fused-lmhead128-graph-diagnostic.json  2026-05-14-hipengine-qwen35-paro-512-128-c1-diagnostic.json  2026-05-14-hipengine-qwen35-paro-512-128-graph-diagnostic.json  2026-05-14-hipengine-qwen35-paro-512-128-linear-qkv-z-full-qk-fused-graph-diagnostic.json  2026-05-14-hipengine-qwen35-paro-512-128-lmhead128-qk-qkvz-fused-graph-diagnostic.json  2026-05-14-hipengine-qwen35-paro-512-128-tokenizer-cache-diagnostic.json  2026-05-15-hipengine-qwen35-c1-parent-fixture-accepted.json  2026-05-15-hipengine-qwen35-c2-native-compact-prefill-correctness-accepted.json  2026-05-15-hipengine-qwen35-c2-scheduler-serial-bench-blocked.json  2026-05-15-hipengine-qwen35-c2-serial-slot-runner-accepted.json  2026-05-15-hipengine-qwen35-c4-native-compact-prefill-correctness-accepted.json  2026-05-15-hipengine-qwen35-c4-scheduler-serial-bench-blocked.json  2026-05-15-hipengine-qwen35-c4-scheduler-serial-runner-accepted.json  2026-05-15-hipengine-qwen35-c8-scheduler-serial-runner-accepted.json  2026-05-15-hipengine-qwen35-cn-generated-equality-accepted.json  2026-05-15-hipengine-qwen35-dflash-ddtree-blocked.json  2026-05-15-hipengine-qwen35-linear-attn-segment-prefill-accepted.json  2026-05-15-hipengine-qwen35-native-prefill-compact-c8-blocked.json  2026-05-15-hipengine-qwen35-native-prefill-full-attn-boundary-blocked.json  2026-05-15-hipengine-qwen35-native-prefill-plan-blocked.json  2026-05-15-hipengine-qwen35-native-prefix-layer0-attention-accepted.json  2026-05-15-hipengine-qwen35-native-prefix-layer0-attn-rejected.json  2026-05-15-hipengine-qwen35-native-prefix-layer0-decode-rejected.json  2026-05-15-hipengine-qwen35-native-prefix-layer3-fullattn-stage-accepted.json  2026-05-15-hipengine-qwen35-native-prefix-serial-fullattn-layer4-accepted.json  2026-05-15-hipengine-qwen35-native-prefix-sweep-rejected.json  2026-05-15-hipengine-qwen35-prefix-bisect-blocked.json  2026-05-15-hipengine-qwen35-varlen-full-attn-prefill-accepted.json  2026-05-16-hipengine-gguf-q4k-pack8-bf16out-diagnostic.json  2026-05-16-hipengine-gguf-q4k-pack8-gemv-diagnostic.json  (+357 more)
hipEngine/docs/: AGENTIC.md  BENCHMARK.md  CONCURRENCY.md  DFLASH.md  ENVS.md  KERNELS.md  MARLIN.md  MTP.md  OOM.md  OPTIMIZE-DENSE.md  PLAN.md  PUBLISH.md  README.md  ROOFLINE.md  SAMPLING.md  TENSOR_PARALLEL.md  TESTING.md  THEROCK.md  VLLM_RDNA3.md
hipEngine/hipengine/: __main__.py  cli.py  llm.py
hipEngine/scripts/: __init__.py  assemble_paro_mtp_bf16.py  check_fixtures.py  check_lineage.py  dflash_commit_chain_smoke.py  dflash_context_kv_materializer_smoke.py  dflash_dense_microbench.py  dflash_drafter_root_query_smoke.py  dflash_prepare_prompts.py  dflash_qkv_fusion_correctness.py  dflash_speculative_bench.py  dflash_tree_attn_kernel_smoke.py  dflash_tree_e2e_smoke.py  gdn_decode_probe.py  gen_b0_moe_ffn_fixture.py  gguf_fused_moe_ffn_teacher_forced_kl.py  gguf_prefill_projection_smoke.py  gguf_q4_k_moe_ffn_fused_microbench.py  gguf_q4_k_t16_selected_prefill_microbench.py  graph_node_microbench.py  hipfire_dflash_exactness_audit.py  inspect_gguf.py  llamacpp_bench_with_peak.py  llamacpp_vulkan_concurrency_sweep.py  mtp_chain_e2e_smoke.py  mtp_layer_drift_audit.py  mtp_native_decode_step_smoke.py  mtp_prompt_suite_economics.py  mtp_state_drift_audit.py  mtp_torch_proposal_smoke.py  native_sampler_overhead_profile.py  paro_moe_ffn_fused_smoke.py  qwen35_batch_c_sweep.py  qwen35_batch_constants.py  qwen35_batch_correctness.py  qwen35_batch_equality_matrix.py  qwen35_batch_int8_diagnostic.py  qwen35_batch_retained_bench.py  qwen35_batch_serial_correctness.py  qwen35_compare_tables.py  (+28 more)
hipEngine/tests/: _gguf_synthetic_weights.py  test_adaptive_budget.py  test_build.py  test_cast_plan.py  test_cli.py  test_cpu_reference_paro_moe_ffn.py  test_dense_gemv_wmma.py  test_dflash_accept_kernels.py  test_dflash_add_rmsnorm.py  test_dflash_dense_wmma.py  test_dflash_draft_confidence.py  test_dflash_metadata.py  test_dflash_profile_route_manifest.py  test_dflash_topk_tree_compiler.py  test_dflash_verify_graph.py  test_fusion_spike.py  test_generation_constraints.py  test_generation_qwen35_gguf_sampling.py  test_generation_registry.py  test_gguf_e2e_acceptance.py  test_gguf_expert_pack8_gemv.py  test_gguf_k_gemv.py  test_gguf_k_selected_pack8_gemv_decode.py  test_gguf_k_t16_selected_wmma_prefill.py  test_gguf_linear_dispatch.py  test_gguf_q4_k_pack8_gemv_decode.py  test_gguf_q4_k_selected_wmma_prefill.py  test_gguf_q4_k_tile16_repack.py  test_gguf_q6_k_embedding.py  test_gguf_q6_k_t16_gemv_decode.py  test_gguf_q8_0_t16_wmma_prefill.py  test_gguf_q8_0_wmma_prefill_dual.py  test_gguf_t16_selected_gemv_decode.py  test_gpu_sampler_kernel.py  test_kernel_registry.py  test_kvcache_policy.py  test_kvcache_spans.py  test_llm_gguf_generate_path.py  test_loading_safetensors.py  test_local_agent_config.py  (+34 more)
(+3801 files in other folders)
