[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hipengine"
version = "0.2.2"
description = "ROCm-native local LLM inference engine with a torch-free runtime hot path"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "hipEngine contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "numpy>=1.26",
  "safetensors>=0.4",
  "tokenizers>=0.15",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Server dependencies install by default; this extra is intentionally empty.
server = []
torch = [
  "torch>=2.5",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
hipengine = "hipengine.cli:main"

[project.urls]
Homepage = "https://github.com/shisa-ai/hipEngine"
Repository = "https://github.com/shisa-ai/hipEngine"
Issues = "https://github.com/shisa-ai/hipEngine/issues"
Changelog = "https://github.com/shisa-ai/hipEngine/blob/main/CHANGELOG.md"

[tool.hatch.build]
artifacts = [
  "hipengine/kernels/hip_gfx1100/attention/aotriton_runtime/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["hipengine", "scripts"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
